# Hikari

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  readme.md
app/: CMakeLists.txt
app/00_hello_world/: CMakeLists.txt  main.cpp
app/01_simple_triangle/: CMakeLists.txt  main.cpp
app/02_skybox/: CMakeLists.txt  main.cpp
app/03_blinn_phong/: CMakeLists.txt  main.cpp
app/04_shadow_map/: CMakeLists.txt  main.cpp
app/05_multi_light/: CMakeLists.txt  blinn.frag  blinn.vert  main.cpp
app/06_pbr_direct/: CMakeLists.txt  blinn.frag  cook_torrance.frag  main.cpp
app/07_irradiance_convolution/: CMakeLists.txt  main.cpp  skybox.frag  texture.vert
app/08_diffuse_irradiance/: CMakeLists.txt  cook_torrance.frag  main.cpp  skybox.vert  texture.frag
app/09_prefilter_env/: CMakeLists.txt  main.cpp  skybox.frag  texture.frag  texture.vert
app/10_brdf_lut/: CMakeLists.txt  main.cpp  texture.frag  texture.vert
app/11_pbr_env/: CMakeLists.txt  cook_torrance.frag  main.cpp  skybox.frag  skybox.vert
app/12_multi_scattering/: CMakeLists.txt  cook_torrance.frag  main.cpp
app/13_normal_map/: CMakeLists.txt  main.cpp  pbr.vert
app/14_int_imgui/: CMakeLists.txt  main.cpp  pbr.frag
app/15_deferred_shading/: CMakeLists.txt  gbuffer.frag  gbuffer.vert  light.frag  light.vert  main.cpp
ext/: CMakeLists.txt  stb_source.cpp
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/hikari/: application.h  asset.h  camera.h  common.h  input.h  mathematics.h  opengl.h  render_context.h  window.h
scene/assets/shaders/: BRDF.glsl  BrdfLut.frag  BrdfLut.vert  BrdfLutMultiScattering.frag  HikariCamera.glsl  HikariITransform.glsl  HikariInput.glsl  HikariLight.glsl  HikariTransform.glsl  IrradianceConvolution.frag  Macros.glsl  PreFilterEnv.frag  PreFilterEnv.vert  SphericalToCubeMap.frag  ToneMapping.glsl
scene/assets/skybox_pillars_4k/: source.txt
src/: CMakeLists.txt  application.cpp  asset.cpp  camera.cpp  common.cpp  input.cpp  opengl.cpp  render_context.cpp  window.cpp
test/: CMakeLists.txt
test/preprocess_shader/: CMakeLists.txt  test_parse_shader.cpp  test_preprocess_shader.cpp
test/vector/: CMakeLists.txt  test_matrix.cpp  test_qua.cpp  test_vector.cpp
